2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed segmentation fault error when no file is selected in
	multi-file torrent.	
	* src/BitfieldMan.cc
	
2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Escaped <,>,& character in XML-RPC response.
	* src/XmlRpcMethod.cc

2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Throw DlAbortEx instead of FatalException during parsing options
	because we don't want for aria2 to quit when bad option is passed
	via XML-RPC.
	* src/OptionHandlerException.cc
	* src/OptionHandlerException.h
	* src/OptionHandlerImpl.h
	* src/OptionParser.cc
	* src/OptionParser.h
	* src/PStringSegment.cc
	* src/ParameterizedStringParser.cc
	* src/download_helper.cc
	* test/ParameterizedStringParserTest.cc

2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Selecting files are now done in
	DefaultBtContext::setFileFileter().
	PieceStorage::setFileFilter(), DiskAdaptor::addDownloadEntry()
	functions are removed because they are no longer used.  Creating
	filter in BitfieldMan is done in new funtion
	PieceStorage::setupFileFilter()	
	* src/BtContext.cc
	* src/BtContext.h
	* src/DefaultBtContext.cc
	* src/DefaultBtContext.h
	* src/DefaultPieceStorage.cc
	* src/DefaultPieceStorage.h
	* src/DiskAdaptor.cc
	* src/DiskAdaptor.h
	* src/PieceStorage.h
	* src/RequestGroup.cc
	* src/UnknownLengthPieceStorage.h
	* src/XmlRpcMethodImpl.cc
	* test/DefaultBtContextTest.cc
	* test/MockBtContext.h
	* test/MockPieceStorage.h

2009-05-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error on Mac OS X
	* src/HttpServer.cc
	* src/XmlRpcMethod.h
	* src/XmlRpcMethodImpl.cc

2009-05-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use std::binary_search instead of std::find
	* src/DefaultPieceStorage.cc
	
2009-05-10  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed unnecessary BDE() call; leave them to implicit conversion.