@@ -1,5 +1,15 @@
 2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	DownloadResult now has the list of FileEntry.  The download
+	summary displays the path of first selected file and the number of
+	remaining files for multi-file torrent.
+	* src/DownloadResult.h
+	* src/RequestGroup.cc
+	* src/RequestGroupMan.cc
+	* test/RequestGroupTest.cc
+	
+2009-05-12  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	Fixed segmentation fault error when no file is selected in
 	multi-file torrent.	
 	* src/BitfieldMan.cc
